WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15586
REGRESSION (
r26759
-
r26785
): Windows nightly builds crash with Safari 3 Public Beta
https://bugs.webkit.org/show_bug.cgi?id=15586
Summary
REGRESSION (r26759-r26785): Windows nightly builds crash with Safari 3 Public...
mohaja
Reported
2007-10-20 19:30:58 PDT
Currently running
r26759
& functioning. Latest nightlies unable to run. windows compatibility report. <?xml version="1.0" encoding="UTF-16"?> <DATABASE> <EXE NAME="Safari.exe" FILTER="GRABMI_FILTER_PRIVACY"> <MATCHING_FILE NAME="CFNetwork.dll" SIZE="409600" CHECKSUM="0x1B06AA20" BIN_FILE_VERSION="1.185.11.0" BIN_PRODUCT_VERSION="1.185.11.0" PRODUCT_VERSION="1, 185, 11, 0" FILE_DESCRIPTION="CFNetwork" COMPANY_NAME="Apple Computer, Inc." PRODUCT_NAME=" CFNetwork" FILE_VERSION="1, 185, 11, 0" ORIGINAL_FILENAME="CFNetwork.dll" INTERNAL_NAME="CFNetwork" LEGAL_COPYRIGHT="Copyright (C) 2007" VERFILEDATEHI="0x0" VERFILEDATELO="0x0" VERFILEOS="0x4" VERFILETYPE="0x2" MODULE_TYPE="WIN32" PE_CHECKSUM="0x6F73C" LINKER_VERSION="0x0" UPTO_BIN_FILE_VERSION="1.185.11.0" UPTO_BIN_PRODUCT_VERSION="1.185.11.0" LINK_DATE="06/23/2007 22:04:42" UPTO_LINK_DATE="06/23/2007 22:04:42" VER_LANGUAGE="English (United States) [0x409]" /> <MATCHING_FILE NAME="CoreFoundation.dll" SIZE="458752" CHECKSUM="0x3AD9E4DD" BIN_FILE_VERSION="1.434.8.0" BIN_PRODUCT_VERSION="1.434.8.0" PRODUCT_VERSION="1, 434, 8, 0" FILE_DESCRIPTION="CoreFoundation" COMPANY_NAME="Apple Computer, Inc." PRODUCT_NAME="CoreFoundation" FILE_VERSION="1, 434, 8, 0" ORIGINAL_FILENAME="CoreFoundation.dll" INTERNAL_NAME="CoreFoundation" LEGAL_COPYRIGHT="Copyright (C) 2007" VERFILEDATEHI="0x0" VERFILEDATELO="0x0" VERFILEOS="0x4" VERFILETYPE="0x2" MODULE_TYPE="WIN32" PE_CHECKSUM="0x7FAAF" LINKER_VERSION="0x0" UPTO_BIN_FILE_VERSION="1.434.8.0" UPTO_BIN_PRODUCT_VERSION="1.434.8.0" LINK_DATE="06/23/2007 21:29:22" UPTO_LINK_DATE="06/23/2007 21:29:22" VER_LANGUAGE="English (United States) [0x409]" /> <MATCHING_FILE NAME="CoreGraphics.dll" SIZE="3592192" CHECKSUM="0xC41D8121" BIN_FILE_VERSION="1.0.22.0" BIN_PRODUCT_VERSION="1.0.22.0" PRODUCT_VERSION="1.0.22.0" FILE_DESCRIPTION="CoreGraphics DLL" COMPANY_NAME="Apple Computer, Inc." PRODUCT_NAME=" CoreGraphics" FILE_VERSION="1.0.22.0" ORIGINAL_FILENAME="CoreGraphics.dll" INTERNAL_NAME="CoreGraphics" LEGAL_COPYRIGHT="© 2006 Apple Computer, Inc. All Rights Reserved." VERFILEDATEHI="0x0" VERFILEDATELO="0x0" VERFILEOS="0x4" VERFILETYPE="0x2" MODULE_TYPE="WIN32" PE_CHECKSUM="0x379210" LINKER_VERSION="0x0" UPTO_BIN_FILE_VERSION="1.0.22.0" UPTO_BIN_PRODUCT_VERSION="1.0.22.0" LINK_DATE="06/23/2007 22:21:17" UPTO_LINK_DATE="06/23/2007 22:21:17" VER_LANGUAGE="English (United States) [0x409]" /> <MATCHING_FILE NAME="icudt36.dll" SIZE="8822784" CHECKSUM="0x5117B18E" BIN_FILE_VERSION="3.6.0.0" BIN_PRODUCT_VERSION="3.6.0.0" PRODUCT_VERSION="3, 6, 0, 0" FILE_DESCRIPTION="ICU Data DLL" COMPANY_NAME="IBM Corporation and others" PRODUCT_NAME="International Components for Unicode" FILE_VERSION="3, 6, 0, 0" ORIGINAL_FILENAME="icudt36.dll" LEGAL_COPYRIGHT=" Copyright (C) 2005, International Business Machines Corporation and others. All Rights Reserved. " VERFILEDATEHI="0x0" VERFILEDATELO="0x0" VERFILEOS="0x4" VERFILETYPE="0x2" MODULE_TYPE="WIN32" PE_CHECKSUM="0x0" LINKER_VERSION="0x0" UPTO_BIN_FILE_VERSION="3.6.0.0" UPTO_BIN_PRODUCT_VERSION="3.6.0.0" LINK_DATE="06/23/2007 21:02:17" UPTO_LINK_DATE="06/23/2007 21:02:17" VER_LANGUAGE="Language Neutral [0x0]" /> <MATCHING_FILE NAME="icuin36.dll" SIZE="679936" CHECKSUM="0x957D5A01" BIN_FILE_VERSION="3.6.0.0" BIN_PRODUCT_VERSION="3.6.0.0" PRODUCT_VERSION="3, 6, 0, 0" FILE_DESCRIPTION="IBM ICU I18N DLL" COMPANY_NAME="IBM Corporation and others" PRODUCT_NAME="International Components for Unicode" FILE_VERSION="3, 6, 0, 0" ORIGINAL_FILENAME="icuin36.dll" LEGAL_COPYRIGHT=" Copyright (C) 2005, International Business Machines Corporation and others. All Rights Reserved. " VERFILEDATEHI="0x0" VERFILEDATELO="0x0" VERFILEOS="0x4" VERFILETYPE="0x2" MODULE_TYPE="WIN32" PE_CHECKSUM="0xB1FC4" LINKER_VERSION="0x0" UPTO_BIN_FILE_VERSION="3.6.0.0" UPTO_BIN_PRODUCT_VERSION="3.6.0.0" LINK_DATE="06/23/2007 21:00:49" UPTO_LINK_DATE="06/23/2007 21:00:49" VER_LANGUAGE="Language Neutral [0x0]" /> <MATCHING_FILE NAME="icuuc36.dll" SIZE="1024000" CHECKSUM="0xD3DD62B5" BIN_FILE_VERSION="3.6.0.0" BIN_PRODUCT_VERSION="3.6.0.0" PRODUCT_VERSION="3, 6, 0, 0" FILE_DESCRIPTION="IBM ICU Common DLL" COMPANY_NAME="IBM Corporation and others" PRODUCT_NAME="International Components for Unicode" FILE_VERSION="3, 6, 0, 0" ORIGINAL_FILENAME="icuuc36.dll" LEGAL_COPYRIGHT=" Copyright (C) 2005, International Business Machines Corporation and others. All Rights Reserved. " VERFILEDATEHI="0x0" VERFILEDATELO="0x0" VERFILEOS="0x4" VERFILETYPE="0x2" MODULE_TYPE="WIN32" PE_CHECKSUM="0xFD5C1" LINKER_VERSION="0x0" UPTO_BIN_FILE_VERSION="3.6.0.0" UPTO_BIN_PRODUCT_VERSION="3.6.0.0" LINK_DATE="06/23/2007 21:00:25" UPTO_LINK_DATE="06/23/2007 21:00:25" VER_LANGUAGE="Language Neutral [0x0]" /> <MATCHING_FILE NAME="libtidy.dll" SIZE="319488" CHECKSUM="0x49F1708C" MODULE_TYPE="WIN32" PE_CHECKSUM="0x51E11" LINKER_VERSION="0x0" LINK_DATE="06/23/2007 21:20:27" UPTO_LINK_DATE="06/23/2007 21:20:27" /> <MATCHING_FILE NAME="libxml2.dll" SIZE="1055232" CHECKSUM="0x25DBA50F" MODULE_TYPE="WIN32" PE_CHECKSUM="0x0" LINKER_VERSION="0x20006" LINK_DATE="06/23/2007 21:06:59" UPTO_LINK_DATE="06/23/2007 21:06:59" /> <MATCHING_FILE NAME="libxslt.dll" SIZE="197632" CHECKSUM="0xF33FEB3" MODULE_TYPE="WIN32" PE_CHECKSUM="0x365C7" LINKER_VERSION="0x10001" LINK_DATE="06/23/2007 21:19:02" UPTO_LINK_DATE="06/23/2007 21:19:02" /> <MATCHING_FILE NAME="pthreadVC2.dll" SIZE="47616" CHECKSUM="0x46C901B2" BIN_FILE_VERSION="2.7.0.0" BIN_PRODUCT_VERSION="2.7.0.0" PRODUCT_VERSION="2, 7, 0, 0" FILE_DESCRIPTION="POSIX Threads for Windows32 Library" COMPANY_NAME="Open Source Software community project" FILE_VERSION="2, 7, 0, 0" ORIGINAL_FILENAME="pthreadVC" INTERNAL_NAME="pthreadVC" LEGAL_COPYRIGHT="Copyright (C) Project contributors 1998-2004" VERFILEDATEHI="0x0" VERFILEDATELO="0x0" VERFILEOS="0x4" VERFILETYPE="0x2" MODULE_TYPE="WIN32" PE_CHECKSUM="0x0" LINKER_VERSION="0x0" UPTO_BIN_FILE_VERSION="2.7.0.0" UPTO_BIN_PRODUCT_VERSION="2.7.0.0" LINK_DATE="06/23/2007 21:24:59" UPTO_LINK_DATE="06/23/2007 21:24:59" VER_LANGUAGE="English (United States) [0x409]" /> <MATCHING_FILE NAME="PubSubDLL.dll" SIZE="516096" CHECKSUM="0xAD378C7B" MODULE_TYPE="WIN32" PE_CHECKSUM="0x8B8C0" LINKER_VERSION="0x0" LINK_DATE="06/24/2007 00:02:39" UPTO_LINK_DATE="06/24/2007 00:02:39" /> <MATCHING_FILE NAME="Safari.exe" SIZE="1556280" CHECKSUM="0x5D12AB8A" BIN_FILE_VERSION="3.522.15.5" BIN_PRODUCT_VERSION="3.0.0.0" PRODUCT_VERSION="3.0.3 (522.15.5)" FILE_DESCRIPTION="Safari Web Browser" COMPANY_NAME="Apple Inc." PRODUCT_NAME="Safari" FILE_VERSION="3.0.3 (522.15.5)" ORIGINAL_FILENAME="Safari.exe" INTERNAL_NAME="Safari" LEGAL_COPYRIGHT="Copyright Apple Inc. 2006, 2007" VERFILEDATEHI="0x0" VERFILEDATELO="0x0" VERFILEOS="0x4" VERFILETYPE="0x2" MODULE_TYPE="WIN32" PE_CHECKSUM="0x185880" LINKER_VERSION="0x0" UPTO_BIN_FILE_VERSION="3.522.15.5" UPTO_BIN_PRODUCT_VERSION="3.0.0.0" LINK_DATE="07/25/2007 07:09:32" UPTO_LINK_DATE="07/25/2007 07:09:32" VER_LANGUAGE="English (United States) [0x409]" /> <MATCHING_FILE NAME="SafariTheme.dll" SIZE="172032" CHECKSUM="0xEB6700A8" BIN_FILE_VERSION="3.522.15.5" BIN_PRODUCT_VERSION="3.0.0.0" PRODUCT_VERSION="3.0.3 (522.15.5)" FILE_DESCRIPTION="SafariTheme Dynamic Link Library" COMPANY_NAME="Apple Inc." PRODUCT_NAME="SafariTheme" FILE_VERSION="3.0.3 (522.15.5)" ORIGINAL_FILENAME="SafariTheme.dll" INTERNAL_NAME="SafariTheme" LEGAL_COPYRIGHT="Copyright (C) 2007" VERFILEDATEHI="0x0" VERFILEDATELO="0x0" VERFILEOS="0x4" VERFILETYPE="0x0" MODULE_TYPE="WIN32" PE_CHECKSUM="0x312F0" LINKER_VERSION="0x0" UPTO_BIN_FILE_VERSION="3.522.15.5" UPTO_BIN_PRODUCT_VERSION="3.0.0.0" LINK_DATE="07/25/2007 05:56:36" UPTO_LINK_DATE="07/25/2007 05:56:36" VER_LANGUAGE="English (United States) [0x409]" /> <MATCHING_FILE NAME="SQLite3.dll" SIZE="352256" CHECKSUM="0xE8BEED48" MODULE_TYPE="WIN32" PE_CHECKSUM="0x648A8" LINKER_VERSION="0x0" LINK_DATE="06/23/2007 21:20:21" UPTO_LINK_DATE="06/23/2007 21:20:21" /> <MATCHING_FILE NAME="WebKit.dll" SIZE="3903488" CHECKSUM="0x83585A5A" BIN_FILE_VERSION="3.522.15.5" BIN_PRODUCT_VERSION="3.0.0.0" PRODUCT_VERSION="522.15.5" FILE_DESCRIPTION="WebKit Dynamic Link Library" COMPANY_NAME="Apple Inc." PRODUCT_NAME=" WebKit" FILE_VERSION="3.0.3 (522.15.5)" ORIGINAL_FILENAME="WebKit.dll" INTERNAL_NAME="WebKit" LEGAL_COPYRIGHT="Copyright Apple Inc. 2006, 2007" VERFILEDATEHI="0x0" VERFILEDATELO="0x0" VERFILEOS="0x4" VERFILETYPE="0x2" MODULE_TYPE="WIN32" PE_CHECKSUM="0x3BCB33" LINKER_VERSION="0x0" UPTO_BIN_FILE_VERSION="3.522.15.5" UPTO_BIN_PRODUCT_VERSION="3.0.0.0" LINK_DATE="07/25/2007 07:03:19" UPTO_LINK_DATE="07/25/2007 07:03:19" VER_LANGUAGE="English (United States) [0x409]" /> <MATCHING_FILE NAME="zlib1.dll" SIZE="62464" CHECKSUM="0x537F5F1E" BIN_FILE_VERSION="1.2.2.0" BIN_PRODUCT_VERSION="1.2.2.0" PRODUCT_VERSION="1.2.3" FILE_DESCRIPTION="zlib data compression library" PRODUCT_NAME="zlib" FILE_VERSION="1.2.3" ORIGINAL_FILENAME="zlib1.dll" INTERNAL_NAME="zlib1.dll" LEGAL_COPYRIGHT="(C) 1995-2004 Jean-loup Gailly & Mark Adler" VERFILEDATEHI="0x0" VERFILEDATELO="0x0" VERFILEOS="0x10004" VERFILETYPE="0x2" MODULE_TYPE="WIN32" PE_CHECKSUM="0x169B5" LINKER_VERSION="0x0" UPTO_BIN_FILE_VERSION="1.2.2.0" UPTO_BIN_PRODUCT_VERSION="1.2.2.0" LINK_DATE="06/23/2007 21:20:29" UPTO_LINK_DATE="06/23/2007 21:20:29" VER_LANGUAGE="English (United States) [0x409]" /> <MATCHING_FILE NAME="Plugins\npJavaPlugin.dll" SIZE="13824" CHECKSUM="0x7472E90A" BIN_FILE_VERSION="3.522.15.5" BIN_PRODUCT_VERSION="3.0.0.0" PRODUCT_VERSION="3.0.3 (522.15.5)" FILE_DESCRIPTION="Apple Java Plug-In" COMPANY_NAME="Apple Inc." PRODUCT_NAME="Apple Java Plug-In" FILE_VERSION="3.0.3 (522.15.5)" ORIGINAL_FILENAME="npJavaPlugin.dll" INTERNAL_NAME="Apple Java Plug-In" LEGAL_COPYRIGHT="Copyright (C) 2006, 2007" VERFILEDATEHI="0x0" VERFILEDATELO="0x0" VERFILEOS="0x4" VERFILETYPE="0x0" MODULE_TYPE="WIN32" PE_CHECKSUM="0xEF09" LINKER_VERSION="0x0" UPTO_BIN_FILE_VERSION="3.522.15.5" UPTO_BIN_PRODUCT_VERSION="3.0.0.0" LINK_DATE="07/25/2007 07:04:56" UPTO_LINK_DATE="07/25/2007 07:04:56" VER_LANGUAGE="English (United States) [0x409]" /> <MATCHING_FILE NAME="Safari.resources\en.lproj\SafariResources.dll" SIZE="2093056" CHECKSUM="0xBBFE38B7" BIN_FILE_VERSION="3.522.15.5" BIN_PRODUCT_VERSION="3.0.0.0" PRODUCT_VERSION="3.0.3 (522.15.5)" FILE_DESCRIPTION="Safari Resources" COMPANY_NAME="Apple Inc." PRODUCT_NAME="Safari" FILE_VERSION="3.0.3 (522.15.5)" ORIGINAL_FILENAME="SafariResources.dll" INTERNAL_NAME="Safari Resources" LEGAL_COPYRIGHT="Copyright Apple Inc. 2006, 2007" VERFILEDATEHI="0x0" VERFILEDATELO="0x0" VERFILEOS="0x4" VERFILETYPE="0x2" MODULE_TYPE="WIN32" PE_CHECKSUM="0x201493" LINKER_VERSION="0x0" UPTO_BIN_FILE_VERSION="3.522.15.5" UPTO_BIN_PRODUCT_VERSION="3.0.0.0" LINK_DATE="07/25/2007 07:09:41" UPTO_LINK_DATE="07/25/2007 07:09:41" VER_LANGUAGE="English (United States) [0x409]" /> </EXE> <EXE NAME="kernel32.dll" FILTER="GRABMI_FILTER_THISFILEONLY"> <MATCHING_FILE NAME="kernel32.dll" SIZE="984576" CHECKSUM="0xF0B331F6" BIN_FILE_VERSION="5.1.2600.3119" BIN_PRODUCT_VERSION="5.1.2600.3119" PRODUCT_VERSION="5.1.2600.3119" FILE_DESCRIPTION="Windows NT BASE API Client DLL" COMPANY_NAME="Microsoft Corporation" PRODUCT_NAME="Microsoft® Windows® Operating System" FILE_VERSION="5.1.2600.3119 (xpsp_sp2_gdr.070416-1301)" ORIGINAL_FILENAME="kernel32" INTERNAL_NAME="kernel32" LEGAL_COPYRIGHT="© Microsoft Corporation. All rights reserved." VERFILEDATEHI="0x0" VERFILEDATELO="0x0" VERFILEOS="0x40004" VERFILETYPE="0x2" MODULE_TYPE="WIN32" PE_CHECKSUM="0xF9293" LINKER_VERSION="0x50001" UPTO_BIN_FILE_VERSION="5.1.2600.3119" UPTO_BIN_PRODUCT_VERSION="5.1.2600.3119" LINK_DATE="04/16/2007 15:52:53" UPTO_LINK_DATE="04/16/2007 15:52:53" VER_LANGUAGE="English (United States) [0x409]" /> </EXE> </DATABASE>
Attachments
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2007-10-20 19:55:29 PDT
Works:
r26759
Fails:
r26785
<
rdar://problem/5551495
>
Mark Rowe (bdash)
Comment 2
2007-10-20 20:16:29 PDT
***
Bug 15573
has been marked as a duplicate of this bug. ***
David Kilzer (:ddkilzer)
Comment 3
2007-10-20 22:03:04 PDT
(In reply to
comment #1
)
> <
rdar://problem/5551495
>
This is a known issue with WebKit nigthly builds and the current Safari 3 Public Betas (and seeds) which was introduced in
r26760
.
http://trac.webkit.org/projects/webkit/changeset/26760
Safari betas and seeds will crash with any nightly built on or after
r26760
until a new one is released. Note that you may pick up new seeds by logging in to <
http://developer.apple.com/
> with your ADC account. (If you're not an ADC member, you may create a free "online" ADC account using <
https://connect.apple.com/
> to obtain access to future seeds.) Marking bug as RESOLVED/WONTFIX since this is a known issue that won't be fixed until a new build of Safari is released (after seed 310a18).
David Kilzer (:ddkilzer)
Comment 4
2007-10-22 22:19:46 PDT
***
Bug 15540
has been marked as a duplicate of this bug. ***
Adam Roben (:aroben)
Comment 5
2007-10-27 16:51:07 PDT
We are trying to fix this.
Adam Roben (:aroben)
Comment 6
2007-10-31 00:30:22 PDT
Fixed in
r27294
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug